--- a/assignments/lesson-07/css/small-7.css
+++ b/assignments/lesson-07/css/small-7.css
@@ -245,6 +245,7 @@ footer {
 }
 
 #gallery figcaption {
+    width: 90%;
     font-family: 'Lato', sans-serif;
     font-size: .9em;
     color: white;
